update test cases for the kotlin version vjson